@@ -33,8 +33,7 @@ COM_TEMPLATES_FIELD_TEMPLATE_LABEL="Template"
 COM_TEMPLATES_FIELD_TITLE_DESC="Style Name"
 COM_TEMPLATES_FIELD_TITLE_LABEL="Style Name"
 COM_TEMPLATES_FILE_SAVE_SUCCESS="File successfully saved"
-COM_TEMPLATES_FILTER_TEMPLATE="- Template -"
-COM_TEMPLATES_FILTER_TYPE="- Location -"
+COM_TEMPLATES_FILTER_TEMPLATE="- Select Template -"
 COM_TEMPLATES_FTP_DESC="???"
 COM_TEMPLATES_FTP_TITLE="???"
 COM_TEMPLATES_HEADING_ASSIGNED="Assigned"
@@ -78,7 +77,6 @@ COM_TEMPLATES_TEMPLATE_PREVIEW="Preview"
 COM_TEMPLATES_TEMPLATE_NO_PREVIEW="No preview available"
 COM_TEMPLATES_TEMPLATE_NO_PREVIEW_DESC="To enable template previews, enable the 'Debug Modules' option in Global Configuration"
 COM_TEMPLATES_TEMPLATE_NO_PREVIEW_ADMIN="No preview available for Administrator templates"
-COM_TEMPLATES_TEMPLATES_FILTER_CLIENT="Client"
 COM_TEMPLATES_TEMPLATES_FILTER_SEARCH_DESC="Search in template name or folder name."
 COM_TEMPLATES_TOOLBAR_SET_HOME="Make Default"
 COM_TEMPLATES_XML_DESCRIPTION="This component lets manage templates"
